qrcode Generator completed

--- a/Projects/QRcode/index.html
+++ b/Projects/QRcode/index.html
@@ -18,11 +18,11 @@
             <button>Generate QR code</button>
         </div>
         <div class="qr-code">
-            <img width="200px" src="./qrcode.png" alt="qr-code">
+            <img width="200px" src="" alt="qr-code">
         </div>
     </div>
 
 
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
