--- a/Projects/index.html
+++ b/Projects/index.html
@@ -4,19 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <title>CN Project</title>
 </head>
 <body>
     <div class="container">
-        <div class="row">
+        <div class="row my-4">
             <div class="col">
-                <h3 class="btn btn-primary" href="./QRcode/index.html">QR code generator</h3>
+                <a class="btn btn-primary" href="./QRcode/index.html">QR code generator</a>
             </div>
             <div class="col">
-                <h3 class="btn btn-primary" href="./TranslatorApp/index.html">QR code generator</h3>
+                <h3 class="btn btn-primary" href="./TranslatorApp/index.html"></h3>
             </div>
         </div>
     </div>
     <!-- <script src="script.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
 </body>
 </html>
