--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="row my-4">
             <div class="col">
-                <a class="btn btn-primary" href="./QRcode/index.html">QR code generator</a>
+                <a class="btn btn-primary" href="./Projects/QRcode/index.html">QR code generator</a>
             </div>
             <div class="col">
                 <h3 class="btn btn-primary" href="./TranslatorApp/index.html"></h3>
